--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,13 +11,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.0
-  google_fonts:
   carousel_slider: ^2.2.1
+  cloud_firestore: ^0.14.1+3
+  cupertino_icons: ^1.0.0
+  font_awesome_flutter: ^8.10.0
+  google_fonts: ^1.1.1
   url_launcher: ^5.1.4
-  file_picker: ^2.0.0
-  font_awesome_flutter:
-
 
 dev_dependencies:
   flutter_test:
